refactor: enhance App component with loading state and API integration for account status feat: add SpinningLoader component for loading indication feat: implement ListaEstadosCtaPage for displaying account status refactor: update BuscarClientePage to use getClientes function fix: correct page navigation from ValidarCodigoPage to ListaEstadosCtaPage style: improve table styling for estadosCta

--- a/src/index.css
+++ b/src/index.css
@@ -23,5 +23,18 @@
 }
 
 .card {
-  @apply bg-white rounded-2xl p-10 mt-10 shadow-lg;
+  @apply bg-white rounded-2xl p-10 mt-10 shadow;
+}
+
+#estadosCta td,
+th {
+  @apply py-2 px-2;
+}
+
+#estadosCta tr:nth-child(even) {
+  @apply bg-gray-100;
+}
+
+#estadosCta thead tr {
+  @apply bg-gray-300 font-bold;
 }
