--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import 'tailwindcss';
+@import 'tailwindcss' important;
 
 @theme {
   --font-sans: 'Comfortaa', 'Roboto', sans-serif;
@@ -32,6 +32,9 @@
     width: 100%;
     height: 100%;
   }
+}
+#Subheader {
+  display: none !important;
 }
 .pdf-printer-container {
   display: flex;
@@ -67,7 +70,7 @@
 }
 
 #layout {
-  background-image: url('./assets/bg.png');
+  background-image: url('https://intermercado.mx/wp-content/uploads/2025/06/bg-KN0eh4Nv.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
